# easygems

./: README.md  example1.ipynb  license  pyproject.toml
.github/workflows/: package.yml  test.yml
easygems/: _version.py  remap.py  resample.py  show.py  transform.py
easygems/healpix/: __init__.py
tests/: test_healpix_coords.py  test_healpix_helpers.py  test_resampler.py
