[tool.poetry]
name = "easygems"
version = "0"
description = "Processing tools around km-scale earth system modeling"
authors = ["Tobias Kölling <tobias.koelling@mpimet.mpg.de>"]
readme = "README.md"
repository = "https://github.com/mpimet/easygems.git"
homepage = "https://easy.gems.dkrz.de"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "*"
scipy = "*"
xarray = "*"
cf_xarray = "*"
healpy = ">=1.16.3"
matplotlib = "*"
cartopy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.files."easygems/_version.py"]
persistent-substitution = true
initial-content = """
  TYPE_CHECKING = False
  if TYPE_CHECKING:
      from typing import Tuple, Union
      VERSION_TUPLE = Tuple[Union[int, str], ...]
  else:
      VERSION_TUPLE = object

  version: str
  __version__: str
  __version_tuple__: VERSION_TUPLE
  version_tuple: VERSION_TUPLE

  __version__ = '0.0.0'
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
